# MoBI_Markers

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-venv/: action.yaml
.github/workflows/: docs.yaml  test.yaml
src/mobi_marker/: __init__.py  gui.py  main.py
tests/: test_gui.py  test_main.py
