[project]
name = "mobi-marker"
version = "0.1.0"
description = "A simple GUI application for sending LSL markers"
authors = [
  {name = "kimit0310", email = "kimit0310@gmail.com"}
]
license = "LGPL-2.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.0.0",
    "pylsl>=1.16.0",
]

[project.scripts]
mobi-marker = "mobi_marker.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "mypy>=1.13.0",
  "pre-commit>=4.0.1",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.1",
  "deptry>=0.23.0",
  "pdoc>=15.0.0",
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
